add confirm password validator

--- a/src/midgard/pages/register/register.component.html
+++ b/src/midgard/pages/register/register.component.html
@@ -13,6 +13,9 @@
           <fj-text-input [customStyles]="{'width': '100%'}" [label]="'Password*'" [error]="errors.password" [type]="'password'" [controlName]="'password'" [formGroup]="registerForm" [placeholder]="'Password'"> </fj-text-input>
         </div>
         <div class="register__form__field register__form__field--full-width">
+          <fj-text-input [customStyles]="{'width': '100%'}" [label]="'Confirm Password*'" [error]="errors.password" [type]="'password'" [controlName]="'confirm_password'" [formGroup]="registerForm" [placeholder]="'Retype your password'"> </fj-text-input>
+        </div>
+        <div class="register__form__field register__form__field--full-width">
           <fj-text-input [customStyles]="{'width': '100%'}" [label]="'Organization*'" [error]="errors.organization" [controlName]="'organization_name'" [formGroup]="registerForm" [placeholder]="'Organization'"> </fj-text-input>
         </div>
         <div class="register__form__field register__form__field--full-width">
