--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,7 +1,6 @@
 @import "config/functions/_functions";
 @import "config/mixins/_mixins";
-@import "colors";
-
+/* You can add global styles for midgard to this file, and also import other style files */
 body {
   margin: 0;
 }
