--- a/src/midgard-admin/styles/_colors.scss
+++ b/src/midgard-admin/styles/_colors.scss
@@ -1,5 +1,5 @@
-// colors of midgard
-$primary-color: #1b51a0;
+// colors of midgard admin
+$admin-primary-color: black;
 $primary-color-lighter: #dce8f9;
 $primary-color-lightest: #ebf2fc;
 $text-primary-color: #191919;
