--- a/src/midgard/midgard.component.scss
+++ b/src/midgard/midgard.component.scss
@@ -1,4 +1,4 @@
-@import "./styles/styles";
+@import "styles/styles";
 
 html, body { height: 100%; }
 body { margin: 0; font-family: OpenSans, sans-serif; background-color: $background-secondary-color;}
