--- a/src/midgard/midgard.component.html
+++ b/src/midgard/midgard.component.html
@@ -2,7 +2,7 @@
   <mg-top-bar (menuToggled)="toggleMenu($event)"></mg-top-bar>
   <div class="midgard__container">
     <mg-nav-bar [hideMenu]="hideMenu"></mg-nav-bar>
-    <div class="midgard__wrapper" [ngClass]="{'midgard__wrapper--full-width': hideMenu}">
+    <div class="midgard__wrapper bg-2" [ngClass]="{'midgard__wrapper--full-width': hideMenu}">
       <router-outlet></router-outlet>
     </div>
   </div>
