--- a/src/midgard-admin/pages/login-admin/login-admin.component.scss
+++ b/src/midgard-admin/pages/login-admin/login-admin.component.scss
@@ -1,29 +1,30 @@
 @import "../../../styles";
-.container {
+
+.admin-container {
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.register {
+.login-admin {
   &__card {
     &__logo {
-      display: block;
-      width: rem-calc(160);
-      margin: rem-calc(30 auto);
+       display: block;
+       width: rem-calc(200);
+       margin: rem-calc(30 auto);
     }
     &__content {
-      width: 100%;
-      min-width: rem-calc(300);
-    }
+       width: 100%;
+       min-width: rem-calc(300);
+     }
   }
 
-  &__login-link {
+  &__register-link {
     text-decoration: none;
-    color: black;
+    color: $dark-text-color;
     &:hover {
-      color: $gray-light;
+     color: $gray-light;
     }
   }
   &__form {
@@ -31,8 +32,8 @@
     align-items: center;
     flex-direction: column;
     &__error {
+      color: $danger-color;
       margin: rem-calc(15);
-      width: rem-calc(300);
     }
     &__field {
       margin-bottom: rem-calc(15);
