--- a/src/midgard/components/nav-bar/navbar-elem/navbar-elem.component.scss
+++ b/src/midgard/components/nav-bar/navbar-elem/navbar-elem.component.scss
@@ -16,7 +16,7 @@
     color: $text-secondary-color;
   }
   &--active {
-    background-color: $background-secondary-color;
+    background-color: $background-overlay;
     color: $text-secondary-color;
   }
 }
