--- a/src/midgard/pages/login/login.component.html
+++ b/src/midgard/pages/login/login.component.html
@@ -1,6 +1,6 @@
-<div class="container">
+<div class="container bg-1">
   <fj-card>
-    <img class="login__card__logo" src="assets/img/midgard-logo.svg">
+    <img class="login__card__logo" src="assets/img/midgard-blue-logo.svg">
     <div class="login__card__content">
       <form class="login__form" [formGroup]="loginForm" novalidate (submit)="authenticate()">
         <span class="login__form__error" *ngIf="error">{{this.error}}</span>
