--- a/src/midgard/styles/_colors.scss
+++ b/src/midgard/styles/_colors.scss
@@ -1,13 +1,14 @@
 // colors of midgard
-$primary-color: #1b51a0;
+$primary-color: #0674db;
 $primary-color-lighter: #dce8f9;
 $primary-color-lightest: #ebf2fc;
 $text-primary-color: #191919;
 $text-caption: rgba(102, 102, 102, 1) !default;
 $text-secondary-color: #1b51a0;
-$background-primary-color: #d5dde6;
-$background-secondary-color: #f2f5f7;
-$danger-color: #DD0000;
+$background-primary-color: #f2f5f9;
+$background-secondary-color: lighten($background-primary-color, 5%);
+$background-overlay: lighten($background-primary-color, 16%);
+$danger-color: #db0000;
 $white: #fff;
 $black: #000;
 // Gray Scale
@@ -16,5 +17,5 @@ $gray: #333333;
 $gray-medium-dark: #706e6b;
 $gray-medium: #8B8D9B;
 $gray-light: #9B9B9B;
-$gray-lighter: #dfdfdf;
+$gray-lighter: #d9d9d9;
 $gray-very-light: #F5F5F5;
