get endpoints from swagger.json

--- a/src/midgard-admin/layout/nav-bar-admin/nav-bar-admin.component.html
+++ b/src/midgard-admin/layout/nav-bar-admin/nav-bar-admin.component.html
@@ -1,11 +1,8 @@
 <div class="nav-bar" [ngClass]="{'hide-menu': hideMenu}">
   <div class="nav-bar__container" [ngClass]="{'nav-bar__container--hidden': hideMenu}">
-    <div id="navbar" class="nav-bar__elements">
-      <mg-navbar-elem-admin label="Locations" route="locations"></mg-navbar-elem-admin>
-      <mg-navbar-elem-admin label="Locations" route="locations"></mg-navbar-elem-admin>
-      <mg-navbar-elem-admin label="Locations" route="locations"></mg-navbar-elem-admin>
-      <mg-navbar-elem-admin label="Locations" route="locations"></mg-navbar-elem-admin>
-      <mg-navbar-elem-admin label="Locations" route="locations"></mg-navbar-elem-admin>
+    <div id="navbar" class="nav-bar__elements" *ngIf="endpoints">
+      <mg-navbar-elem-admin *ngFor="let endpoint of endpoints" label="{{endpoint.name}}" route="{{endpoint.value}}"></mg-navbar-elem-admin>
     </div>
   </div>
 </div>
+
