--- a/src/midgard-admin/layout/nav-bar-admin/navbar-elem-admin/navbar-elem-admin.component.html
+++ b/src/midgard-admin/layout/nav-bar-admin/navbar-elem-admin/navbar-elem-admin.component.html
@@ -1,3 +1,3 @@
-<a class="navbar-elem" routerLink="/{{route}}" routerLinkActive="navbar-elem--active">
+<a class="navbar-elem" routerLink="/admin-panel/main/{{route}}" routerLinkActive="navbar-elem--active">
   <span>{{label}}</span>
 </a>
