--- a/src/midgard-admin/styles/_colors.scss
+++ b/src/midgard-admin/styles/_colors.scss
@@ -2,4 +2,5 @@
 $dark-background: #27292b;
 $dark-text-color: #fff;
 $dark-disable-color: #484b4d;
-$dark-top-bar-color: #191c1f
+$dark-top-bar-color: #191c1f;
+$dark-primary-hover: rgba(6, 115, 219, 0.17);
