--- a/src/midgard-admin/components/nav-bar-admin/nav-bar-admin.component.scss
+++ b/src/midgard-admin/components/nav-bar-admin/nav-bar-admin.component.scss
@@ -2,10 +2,10 @@
 
 .nav-bar {
   display: flex;
-  width: 220px;
+  width: rem-calc(300);
   height: 100%;
   background-color: $dark-background;
-  padding: 30px 0;
+  padding: rem-calc(30 0);
   min-height: 100vh;
   -webkit-transition: all 0.1s ease-in-out;
   -moz-transition: all 0.1s ease-in-out;
@@ -18,7 +18,6 @@
     top: 80px;
     left: 35px;
     flex-flow: column nowrap;
-    width: 150px;
     height: 100vh;
     -webkit-transition: all 0.1s ease-in-out;
     -moz-transition: all 0.1s ease-in-out;
