--- a/src/midgard-admin/pages/main-admin/main-admin.component.html
+++ b/src/midgard-admin/pages/main-admin/main-admin.component.html
@@ -1,4 +1,8 @@
-<div class="admin-container bg-1--dark">
+<div class="bg-1--dark">
   <mg-top-bar-admin (menuToggled)="toggleMenu($event)"></mg-top-bar-admin>
-  <mg-nav-bar-admin [hideMenu]="hideMenu"></mg-nav-bar-admin>
+  <div class="admin-container">
+    <mg-nav-bar-admin [hideMenu]="hideMenu"></mg-nav-bar-admin>
+    <mg-endpoint-detail [endpoint]="currentEndpoint"></mg-endpoint-detail>
+  </div>
 </div>
+
