--- a/src/midgard/pages/user/user-management/user-list/user-list.component.html
+++ b/src/midgard/pages/user/user-management/user-list/user-list.component.html
@@ -3,7 +3,7 @@
   #crud="mgCrud"
   [rows]= "crud.rows"
   [viewPort]="'350px'"
-  [endpoint]="'coreuser'"
+  [endpoint]="'coreuser/'"
   [idProp]="'id'"
   [deleteMessage]="'The user has been deactivated'"
   (dataLoadedFromStore)="defineDropdownOptions()"
