--- a/src/midgard-admin/styles/_colors.scss
+++ b/src/midgard-admin/styles/_colors.scss
@@ -5,4 +5,5 @@ $dark-disable-color: #484b4d;
 $dark-top-bar-color: #191c1f;
 $dark-primary-hover: rgba(6, 115, 219, 0.17);
 
+$dark-background-brighter: lighten(#27292b, 5%);
 $dark-background-brightest: lighten(#27292b, 16%);
