--- a/src/midgard-admin/components/endpoint-detail/endpoint-detail.component.scss
+++ b/src/midgard-admin/components/endpoint-detail/endpoint-detail.component.scss
@@ -86,6 +86,7 @@ $delete-color: #fe5a5a;
         width: rem-calc(240);
         padding: rem-calc(15);
         background-color: $dark-background-brighter;
+        box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.15);
         &__close {
           position: absolute;
           right: rem-calc(15);
@@ -93,6 +94,7 @@ $delete-color: #fe5a5a;
         }
         pre {
           overflow: auto;
+          height: rem-calc(450);
         }
       }
       &__verb {
