--- a/src/midgard-admin/components/top-bar-admin/top-bar-admin.component.html
+++ b/src/midgard-admin/components/top-bar-admin/top-bar-admin.component.html
@@ -5,5 +5,8 @@
       <img class="top-bar__home__logo" src="assets/img/midgard-admin-logo.svg">
       <!--<div>{{appTitle}}</div>-->
     </a>
+    <div class="top-bar__logout">
+      <img class="top-bar__logout__icon" (click)="logOut()" src="assets/img/logout-icon.svg"/>
+    </div>
   </div>
 </div>
